<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/rl_home_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_manhinhhome"
            android:paddingTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearXinChao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgAvataruser"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/ic_user_avatar" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="140dp"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/xin_chao_user"
                    android:textSize="16sp" />
            </LinearLayout>


        </RelativeLayout>

        <GridView
            android:id="@+id/gv_services"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:numColumns="3"
            android:horizontalSpacing="20dp"
            android:verticalSpacing="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_home_1" />

        <RelativeLayout
            android:id="@+id/btn_thongtincanhiem"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/bg_thongtincanhiem_home"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gv_services">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rectangle_home_2"
                android:text="@string/thong_tin_ca_nhiem"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_thongtincanhan"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/bg_thongtincanhan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_thongtincanhiem">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rectangle_home_2"
                android:text="@string/thong_tin_ca_nhan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

